# AR-Television

./: .gitignore  CMakeLists.txt  README.md
AR-TV/AR-TV.xcodeproj/: project.pbxproj
Reconstruction/Reconstruction/: Frame.h  bundleAdjustment.cpp  bundleAdjustment.h  eightpoint.cpp  (+11 more)
Reconstruction/Reconstruction.xcodeproj/: project.pbxproj
artv/: CMakeLists.txt
artv/AR-Television.xcodeproj/: project.pbxproj
artv/AR-Television.xcodeproj/project.xcworkspace/xcuserdata/nicci.xcuserdatad/: UserInterfaceState.xcuserstate
artv/AR-Television.xcodeproj/xcuserdata/nicci.xcuserdatad/xcschemes/: AR-Television.xcscheme  xcschememanagement.plist
artv/ar_engine/: AREngine.cpp  AREngine.h  AREngineVObj.cpp  CMakeLists.txt  Object.cpp  Object.h  TV.cpp  TV.h  VObject.cpp  VObject.h
artv/ar_engine/vobjects/: VScreen.cpp  VScreen.h  VTelevision.cpp  VTelevision.h
artv/ar_engine/winbuild/: ar_engine.vcxproj  ar_engine.vcxproj.filters
artv/common/: ARUtils.cpp  ARUtils.h  ARUtils.hpp  CMakeLists.txt  CVUtils.cpp  CVUtils.h  ErrorCodes.h  OSUtils.h  Utils.h  utils.hpp
artv/common/winbuild/: common.vcxproj  common.vcxproj.filters
artv/ios_demo/ARRecorder/: Utilities.swift  ViewController.swift
artv/ios_demo/ARRecorder.xcodeproj/: project.pbxproj
artv/ios_demo/ARRecorder.xcodeproj/project.xcworkspace/xcuserdata/jack.xcuserdatad/: UserInterfaceState.xcuserstate
artv/offline_demo/: CMakeLists.txt  OfflineDemo.cpp  offline_demo.cpp
artv/offline_demo/winbuild/: offline_demo.vcxproj  offline_demo.vcxproj.filters
report/: main.aux  main.bbl  main.blg  main.tex  references.bib
winbuild/: ARTV.props  OpenCV330.props  artv.sln
(+21 files in other folders)
